@@ -41,6 +41,9 @@
 (define (input (<connection> c))
   (connection-input c))
 
+(define (input (<os-connection> c))
+  (os-connection-input c))
+
 (define (input (<process> q))
   (queue-input q))
   
@@ -55,6 +58,9 @@
 
 (define (output (<connection> c))
   (connection-output c))
+
+(define (output (<os-connection> c))
+  (os-connection-output c))
 
 (define (output (<process> q))
   (queue-output q))
