@@ -1,12 +1,21 @@
-????/??/?? WaspDoc Integration
+????/??/?? LibEvent Restoration
+  - Restored event loop from future.
+  - Modified core/io module to handle os-connection outputs and inputs.
+  t Added os-service type to vm, derived from input, yields os-connections.
+  t Added (tcp-serve portno) -> os-service to vm/os.c
+    + BUG: Cannot transmit to os-connections from listener.
+  + BUG: Crash on waiting for a close.
+  + Implemented timeout scheduling.
+  + Implemented wait-timeout function.
+
+2008/06/24 WaspDoc Integration
   - Added exprs->string primitive.
   - Added write-lisp-file to core/file module.
   - Added string-read-expr! primitive to vm/core.c and vm/string.c
   - Modified string-skip-space! to return number of spaces skipped.
   - Fixed a bug in the parser that considered a single dot to be an incomplete expression; should
     be an error.
-  + Fixed a bug in the REPL that caused it to crash when a bogus expression was suppled to it.
-  + Reintegrated WaspDoc from pre-Rewind tree.
+  - Reintegrated WaspDoc from pre-Rewind tree.
 
 2008/06/20 Namespace Cleanup
   - Renamed set primitive to make-set.
